--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wLNhFNmVkX7jmjzd72xr4cUA802aMw1MoMvKlrweWeXRaYWFU9ZrCMQ7KLXQja1tiru13nXvgG1nJ9quiKBvv%2FryV2vALXUTq4XT4%2Bqbu8aq1qF8y6xSuVa9PvUt3YkSTwXAOYHPnUFy8zVQmG4mio1FD1cUWvGTd1nOs07YaK5PowR1JG9lkSJMCMdHcdXzVp6V5ynugcKdK%2Fw0x%2FfZex5RXd29k8D9G1Ua48cb2SgK%2BzTv6Uo1Gt27DebPO5gwV99anlviZHXBjVd2k5EA4WsmQLM%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=heER%2Fm%2BjlJKAjcnidLOf8Dc3cAxytNRIbtzEDcOY825d6OvJ6paPpvNVhXdv7Tx3Oku3RoHjwva%2FGvJm3wAMm%2FpJXIsJcjZP93S6M3CoZVjbSfsXd1WFppSOq1S4AV8R%2Fz6JGGIy4Bt%2FHBhq6ep3e22ZbVkzBVSA3o9CKiypFp3zuEz42N%2FBgxai70nQUhM1L1NOludsZaWxh8wpHtY2vBObksvhcxjCK0Kzz1DPm5%2F6QMmEvS2pSHrgyL0eQ4w3WvF4vaexHxFbGjOPJr4mXgkMqj4%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
