--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=0RLLBinSgNEkUNKLClN53r3cgumBmZjI879ivFM%2FKlPNoYuy9wFHntXWFu2qD0iT4BortqfmD%2BD1tlySjxc9yQjGbfWyaG46oH%2BlNeOBBR1CK4%2F1upM4ib6CF4JZB3HfXuWx2igYHsTAd%2FgzNxpF8ZIvB68rKrIpzAPQs3Tr0VP5Tzuf8bVo3OqTB4Vhd6qkuDXIUnWx5sHCjpGlPmXWo0DuNZhAnIRCaVL4YT0AJOhC0XEeRN%2F2bI94s3jUGaXBhDrBQcD1acDNYrACEeM5ls99xwI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=QsO1RwDVM1XpxfbC7ZIATgPos%2BUHEuhA%2Fw66moyld%2FGWI%2F7Qqm4DFscfDJvWk5OmmkN5HUu4AA%2BS1s9hksda8hWmSy94Q%2F%2BKiyIo948QTi3mYGzIr%2FTwUTVwszdX1pgD%2B%2ByIq7X8UuII7pW5kVRZVhZ43MFyhl4Y97gtUtHZbJkJV0Oljq6DVybNeZS3Bd32Gt7OgM1e%2FDVfhOfoB7HqXgnVRB%2F03yInIVtS05OtAE9BIYr2xE0EpMIUzJuLJ1zoKafqBDjca69%2FjwQULIjTc0YxHpI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
