--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=QsO1RwDVM1XpxfbC7ZIATgPos%2BUHEuhA%2Fw66moyld%2FGWI%2F7Qqm4DFscfDJvWk5OmmkN5HUu4AA%2BS1s9hksda8hWmSy94Q%2F%2BKiyIo948QTi3mYGzIr%2FTwUTVwszdX1pgD%2B%2ByIq7X8UuII7pW5kVRZVhZ43MFyhl4Y97gtUtHZbJkJV0Oljq6DVybNeZS3Bd32Gt7OgM1e%2FDVfhOfoB7HqXgnVRB%2F03yInIVtS05OtAE9BIYr2xE0EpMIUzJuLJ1zoKafqBDjca69%2FjwQULIjTc0YxHpI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=%2F5tUcAgC%2BybJhCGp5b9z0xcujoNlkvFfotW8YT2dqfClTpVt5fMMSU81MIMs8Efy8OoZj8qcwFAR32QmHRpNJdjLglWZucO3M67R6Y6U8%2B2NYlA3sUF4vSwZpiM0kjrce5brl0u8aRqnuKWls0ULAygmpU03oRKi57jPV77ubuJLsbK9zh5EKpn7SR7Mf9uym0kt0fz6gbVKS0JFea%2F51iSZnKvjGe6DwuKdAePBO%2FvDyT8ZFLGKryTybwmvR%2B8yytMLIE4s32wm148gEYkH9GI7QxE%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
