--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=hrME6XMD3zopdC4hmQnKsiQtnlF%2BulGzodtS%2FL3NppZ82sC22iE8w%2Bf91NjCZcvO53vScn3C3fRaBXK8u0xHXMF%2F%2FM87LrCOCo1u28P0iiQSgMQcoy3NZgsd0SnNaocSAUJ0e9PIH2Srtf%2FMKfWUcg%2FzlZoP1%2F7dwbKZf%2FCNgBaEJ2jzdM3UVvqYE%2F%2FSo3WM6izTK1Z7VNPWP37Mfc2881d6poJXsxvVYfEIc8mmQoBFX5wxsDbqaVxXc97WCBh8VZfPGO8CPjgfv2MDRn%2F%2BBgKZOlg%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=BV%2BSUhS9MinJzDabpBEL0ioqNI3yjTa%2BHD88%2FryfzdOuE3f8229pRP%2FC9l73x7s2lZKxOe7YsspMoljYJpiIaM6T9hwCqJUNiMbZ5q86qIXM7bNd73N%2FAZP7xLMAu86neQTYLtkmCFy1hV0F82SaMXo26OB2f7NQfpjErpY%2BNi6kFXKOYc7laaoihD9Z2N4E%2Bsqfaouu3BYDhSlR7GtOAjGs%2Fs%2FUGEu8472ceBy3dkO4iby0rdxJNGSCnRBdMgOdziB5Nncd8S4mAvaVLip3zJ1ReY8%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
