--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=5KVLr92GShTbqRAszwnSAMethp8b508XomiqSB4u4JW2hHY31Q%2Fy84UxPIjprb3mZNOhwaBhNFOyX6bDsPgfWk%2FgVCFDr6KzphMN9y5EFIpmff12tNWYDdwSNHZ2djeUB4gg19sUOMQJhQ2KaaUZew63aG4yowwgdDcw1h4kcQFtE%2Fs9e9pYX9QpkgJs%2Fzaj4mlnkwozGRtP%2BsCTGqhCYuzKtKrUlJgUKBCblfSa8fsI9n3tgDmIB9z1rJLAfU8d5rmYwOhs%2F5qsjIfPgS1ZNLKdv5E%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=o1MBv%2FiGfGylSflQwtzdjUlxgTIKiYBXyA3POvum26NgkHlMv0eHyibGY5wmKXuRxgzbLsnXwarIHNjt3c7WTHDryWamdwLyWXC1T6CoOgs%2B0LUMYbveogC0Vbq0lH0T2McQRsG%2F9oLmjCH9NLlQUoMpmkZWP1M5AHNLMDQeDHvsvTMpJ7i7puYr%2BOscBzR4kJFUwx2CY%2B4L71twIUsKhLvtfD2%2BWjOUIWV61MaIsI89zwfRkQBsy4mfNDjHGV6fRgce1OlI2Ty9hG77XK%2F6agFpCac%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
