--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=o1MBv%2FiGfGylSflQwtzdjUlxgTIKiYBXyA3POvum26NgkHlMv0eHyibGY5wmKXuRxgzbLsnXwarIHNjt3c7WTHDryWamdwLyWXC1T6CoOgs%2B0LUMYbveogC0Vbq0lH0T2McQRsG%2F9oLmjCH9NLlQUoMpmkZWP1M5AHNLMDQeDHvsvTMpJ7i7puYr%2BOscBzR4kJFUwx2CY%2B4L71twIUsKhLvtfD2%2BWjOUIWV61MaIsI89zwfRkQBsy4mfNDjHGV6fRgce1OlI2Ty9hG77XK%2F6agFpCac%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=MY%2B9I0R1%2Fk%2Bt7xkov%2BqK1ZYeKImYUxd17JmI6Lh9zGJQY8odsr6ECOK2EYIlKwAKt9kkKE4Jxe2HfvfTkO8bM31g%2BYDmW%2FFP7h%2FUSlEPCXh%2ByNhdwvBlxyXU%2BXyB2Cek3t6RTLAIWRVhbWCIXjpU4diH6Y0KtvNz%2FFEuj2aADlYlzPXW2PZoE8H9EvYkPQRXgpi1RnGKpXaCv3vCYGLkeXqacdoYDHlr9%2B1CRuRccHvXAWnl8urFyq53%2FufwjZtB%2FrBF%2FAs6uNSUYN6Nk4%2Fb05ZIztc%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
