--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=89022D%2FXxActoU8bTpyseBp0PhPBuUigeYTXCeFdZcUmhqGcasT5To%2FlJ2mXu%2B9QUf4O%2Fu4tpyE%2B1sPo2NrvSy2DbqgzLHAUAzkkXmNfLRGV7EVE7wBUqDkEM60yHfKjI5ncghzKbexEfDWRwHnDH1SdybpQgZ71CpLj9enq8%2F3ZfFhNwA8fdLUXZ%2FREINO59EqKAIvsg8yE%2FC1yETCYkf2hsWcfNLVdbSNXAw8ewvFpDB6dqfZqbtUkU2KT%2BmD8LPlODtm0A3tcfnzIm90AeJkhX%2Fo%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=v6cMqm02QOpXss4BBx7Q7lQ%2BWo3y08d7hEz8CxJYGpuOAYStUFbZ1%2FgqA%2F6VGHD76jRecF8UMUWzYCiIdLiUIkm8dpTEfFt3Fqr%2FJgrpfV%2FM%2FeffrJQmCFto6j1BRp2pLMgo69%2BDTbmGpGzXLADFRd%2FAcC4fTlHW%2BO7dtd5Ez%2FsYyIHMHNnyIr7%2BNwR8tjSOuCd4qj8IGZFKsIN7QX6AMwuZrM%2BvmAgULKD4yd5eY3NqHRLt93jpPeRBh%2FAtyyyIdaVk7Hc27JSI6hPZf7S0%2FM66iSE%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
