--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=v6cMqm02QOpXss4BBx7Q7lQ%2BWo3y08d7hEz8CxJYGpuOAYStUFbZ1%2FgqA%2F6VGHD76jRecF8UMUWzYCiIdLiUIkm8dpTEfFt3Fqr%2FJgrpfV%2FM%2FeffrJQmCFto6j1BRp2pLMgo69%2BDTbmGpGzXLADFRd%2FAcC4fTlHW%2BO7dtd5Ez%2FsYyIHMHNnyIr7%2BNwR8tjSOuCd4qj8IGZFKsIN7QX6AMwuZrM%2BvmAgULKD4yd5eY3NqHRLt93jpPeRBh%2FAtyyyIdaVk7Hc27JSI6hPZf7S0%2FM66iSE%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ebb3FRMv8rxFf7EYd1b8v%2FICvGpppZI1iWC8s4s4m4zGio9Zf6merN4fdoEN6DiaEIvyE8fOhGRl%2BB3ulzO8MDgJ%2BPZKL56loXxDO%2BH4NiE9oCcz%2FemhhuNKepnFLMfPyie5QnnnccKn1pHtw5iKmmnGlziSd3Z1S%2FAzOgC5I9fak5BIFVjibH5sizTs%2BLsly4uvMUYwsHFHKOkxJLdcFxu32KajZspWMyG8vS349tA8HptVrxCXHdOnp%2FWeJ78JLoIBzlHej9zy34fUs%2BaPjNX2i%2FM%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
