--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=5Nq77QH0VmtqlRVHzUiic7qhz%2BX3sgT5XOxwLyTDiZ7olFNE9dIxEAX9ATSCe6j1K71NP4VbJIOhtcd%2BeMEnRJAygDlnuMjB2rhN8M5PCpJqxQwndaxV5g1305chON0rQSoo1GSPnQYCqjo5nbW5BANRXV%2BOtCiFWpFHe2Vz7qC2so2SQqiLYH5eI1mRCLy%2B%2FAsuC5eX16Ho3BKERm%2BUJ6nfWQRIJma0t%2FABhciCtfN1SVJMBWDabiaqPc18lT4XLU1Y%2F54rjOgyU6IRyzJ78I6e69A%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=7JU2mVSrzDOqX%2BOpvTqDLLzC42HaBPbgLQSBiEb7LgiMrMps%2B5OeI5KBMFCZMn3XeaYN5Jq0tiMF%2FjkUZiNxjYLp4f4ZOAOPr4Zh9hn1tsTbLVn4RzgssxTxzZgDgN5hz05sc8IW5b3FlEjI3R7LWVBAi9rn07tzo3CALuNKDFROvjH7e9O%2FXHQPD7vsijA20U4X7WeddjfNQ0iaEDzIi3RsW7UZCHU12mhVriJ%2BM9lyiFZF%2B2tbqdUIAfL4W6tCfIfc7vJbfYrxzuu68sZz5cofFTA%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
