--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=EJ%2BxQIaj4tkiQuuiA13R9jhW7OW%2BZFvAzd%2F6%2FbbiQOYxeqBydTBf2oo1UlDtHI7eFNBRvjTeVdqIoXrWBkjMEvxu8Itayn3QKadfjLMdn29hipJQdmaHjDTOZ0EJeE17G%2F8IZIsRLDVxFOVYEAp1HjXZPzldRIccd77NtStMnp7hT9rzzgfQdZ8Ad6GsFjsLOKgnuNVDkEDEILAtVTRClI40yUs3djwbHai1pUeRkKnsFydhVRVQo1MRvq6D0BBkk4GYR2Epr6ciatadu5XMcMS%2BN64%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wy1woKf6B%2FrUogwXfW0f8LdbhUyAYa%2BNpFvFRaAWYhGm9J%2BL7A0BdP6B8giD777j6u%2Bgq%2BusHLpjDpk5QTG70Litjdj5MukgtYF8i9TH7DpGGftbiLduwgN0b%2FqP3K9w24gmAqy9tp23CYt9xzDqWLROsSd2atMK9V2FSBg%2BAvBW2ygVh1KnOT0cGSHAvbG2eDn%2FUiumkXn%2BF9wTmVvtr55mKZIcsZycYIyDb3OpMPQG8SOGQ%2FxTydpJtRwU5oom0PMjiknnlAInyUTZ5SEH1wQAC%2B8%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
