--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=1WRXZrtwor0T%2BgEfWd2NklmCda4Qsv9oJkAa4%2FYw5tMxECFzYYwx4rDMYoMu851lLWFqq%2F62Hreyy2hSzRlXiUO%2F%2FBHfvh61KMkmR%2F0vSW6138Wtb6Dz2Rkkl1Eu8G7PjUnrd1rn%2FfqJJsUdEb9k9gA%2FgECWdvdS45sFhM1PduV5b82B5HnIlaSVfayC4EQZ5TIr7AumgGX8tXOpW563toqOpUTmlWOcps2kgde50cjhTZNMdqPB7BP6USwUI5McbtoaIbuTL%2FJoRk1xkNE6kRi6iEA%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=QCGbcy%2F%2FsZRba3Fex0Vl%2BG%2Fc1MbO9ay7rD4GTM2VWTHsqAPkL%2Fj9kBqvxU3QNkun98jkWXZeMnw4m1YpGldSMuTpGEkV9gEFeswoExQ5lASFLpmLtcKVV2PwIHwF2jy1z%2FJlYfQ3sWDBb7NsNp0b1sAxLJ4np10LYY5ySuTVeCIxXMCYw%2FN52SrDM71KOtskTaQm6oqTn4WEUp3XXoke%2FxmEJG63%2ByaiZfQyUlLwu%2BKdIAbwwgaVXJ4nibznbgvtrGh76EZ%2BGgZ49UQOLKgCOVSV1LA%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
