--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=QCGbcy%2F%2FsZRba3Fex0Vl%2BG%2Fc1MbO9ay7rD4GTM2VWTHsqAPkL%2Fj9kBqvxU3QNkun98jkWXZeMnw4m1YpGldSMuTpGEkV9gEFeswoExQ5lASFLpmLtcKVV2PwIHwF2jy1z%2FJlYfQ3sWDBb7NsNp0b1sAxLJ4np10LYY5ySuTVeCIxXMCYw%2FN52SrDM71KOtskTaQm6oqTn4WEUp3XXoke%2FxmEJG63%2ByaiZfQyUlLwu%2BKdIAbwwgaVXJ4nibznbgvtrGh76EZ%2BGgZ49UQOLKgCOVSV1LA%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=7%2Fq%2BlikmlOFYr1QzHNehZDFLx3mxvW%2FbZvO38cdJHXsuxZd5ATSE0aFrPEfvANKxMQOa6x0NngxfXJuNigHs%2FllRuC3tls9UvsAp3gXnEgSBFfbs5s908JJrrGaZhtjZCu%2Fyzq2N3K%2FH2nroWoZN1u8eyvV36z%2BdaKuRZLdTwznb0JQPpZH0iIn4tMMqammJY1RG5ukjQMWeohv7MzKZYVaBsKTB3Kjr8CXcLs2mnmVxM4MjJJaQ8K%2BHhIaql4RCjVm5lV7BBymXeBUgpvC%2FFy5CbY0%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
