--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ZvIaCjpPYiRgt7obz%2FjGId5D7G%2Bxb2aG32pbi%2Fr%2BVRbTOXH9NzQO1G8UWPO3AWaRFpOuY%2FonsGNfl6CHmFtuiHSzt3aLd3KNtdS2DbAXA1p0xtoU15Pj5rF%2B2B3YpYkWbZSQD4l3OnWwWWcmibc9h16oBjoO%2BmKuyZJuPBxFx0ubV4g5PEiiweisvuwUpCHH0mvHhUb468A3AFRgR6b7j%2BQ3PmWNOAfWzAI%2FuQ9k8W3ai2Tl%2Bn6G8DtEBfWX9kEe0UoduIRKfAIxTDFw%2BIOrFFUkFmI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=2SxIVTKDu9QrlYKnyjJUqN3lu%2BjFcdv0URGTIzzS%2BRRPijyVOLCfIBzC47Znp2AcWNlU4FYqskkdNy71DHv2dgPSlNzuzMOhfJqdzaHffTsbA1H6q842oASXTB2kVo7wY9W6cAfOZt8pX8QadS9TPALXcYejXT3TOV3fGX9HNN2nJ2E5%2Bem5RTgm%2FVzXA%2BR5yUd8KS1McipJamKZG7o471MeR6GCzqg1bmI3A6DGUl9hKPIaPd%2BWNFy0QbRy0UlC9XX7wlaoQ8Ty7pHK8dpkpNTiBDI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
