--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=OCoLemuIEryVozNtISW0dfRXgM0J1NOcOSoph2%2FuqqT52fI%2FSZxXzanP7xW6Luryxb7%2FkKkT6bOPyptUsTOON3u%2BDTeTYyguw2LCm%2Fq7FVnRwd%2F1%2BbL5kQ5KmGZW5f0%2BoOtdojBHiZ%2FN3ckIClbxW4e0qq2%2BbjKza0%2FNcklElCneUFeWCSLN8STpIYH%2FB3hpriIlCjJB9bZ9PeiihvRCohYBjEkDoG1iczKYtXJhnCyxqyCBXLZwX4bneof5b6JWSR531UfMGsZrCUs94Au40Uj4SU8%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=E8ECMxu%2FPHBIBWY%2Fw39Hl%2FDFsb9waGKiqQ1zZRdQ7W1SL09PGVozW66eRpNcAckpr7fkpTxUjYENpDe8m2hJiZZl2TDvwTsYt%2BK%2BPFB%2F7LvlrIfvQplh7isuLTCqo5FTsAWovqekjWl8IeeQSBAO0MQxTtaYpIEuSFWMOVf7pzuAKCtR4Fxoo4lv8bQZDamrH4Ld1h%2BiQyuW%2B4%2BRAQaNzDmgBv6dGFZhZx8pwHDfUjjbPLM%2FSQj%2BKbc39nRaxl8fCNJYAge7ohs3k3ASkuhVgJixIqs%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
